
	* fix tracker connection bind issue for IPv6 trackers
	* fix error handling of some merkle torrents
	* fix error handling of unsupported hard-links

1.1.6 release

	* deprecate save_encryption_settings (they are part of the normal settings)
	* add getters for peer_class_filter and peer_class_type_filter
	* make torrent_handler::set_priority() to use peer_classes
	* fix support for boost-1.66 (requires C++11)
	* fix i2p support
	* fix loading resume data when in seed mode
	* fix part-file creation race condition
	* fix issue with initializing settings on session construction
	* fix issue with receiving interested before metadata
	* fix IPv6 tracker announce issue
	* restore path sanitization behavior of ":"
	* fix listen socket issue when disabling "force_proxy" mode
	* fix full allocation failure on APFS

1.1.5 release

	* fix infinite loop when parsing certain invalid magnet links
	* fix parsing of torrents with certain invalid filenames
	* fix leak of torrent_peer objecs (entries in peer_list)
	* fix leak of peer_class objects (when setting per-torrent rate limits)
	* expose peer_class API to python binding
	* fix integer overflow in whole_pieces_threshold logic
	* fix uTP path MTU discovery issue on windows (DF bit was not set correctly)
	* fix python binding for torrent_handle, to be hashable
	* fix IPv6 tracker support by performing the second announce in more cases
	* fix utf-8 encoding check in torrent parser
	* fix infinite loop when parsing maliciously crafted torrents
	* fix invalid read in parse_int in bdecoder
	* fix issue with very long tracker- and web seed URLs
	* don't attempt to create empty files on startup, if they already exist
	* fix force-recheck issue (new files would not be picked up)
	* fix inconsistency in file_priorities and override_resume_data behavior
	* fix paused torrents not generating a state update when their ul/dl rate
	  transitions to zero

1.1.4 release

	* corrected missing const qualifiers on bdecode_node