@@ -478,6 +478,14 @@ namespace libtorrent
 		std::vector<boost::uint8_t> m_file_priority;
 		std::string m_save_path;
 		std::string m_part_file_name;
+
+		// if this is false, we're not using a part file to store priority-0
+		// pieces, but we instead look for them under their actual file names
+		// this defaults to true, but when checking resume data for a torrent
+		// where we would expect to have a part file, but there isn't one, we set
+		// this to false.
+		bool m_use_part_file;
+
 		// the file pool is typically stored in
 		// the session, to make all storage
 		// instances use the same pool
