@@ -1,4 +1,5 @@
 
+	* fix issue resuming 1.0.x downloads with a file priority 0
 	* fix tracker connection bind issue for IPv6 trackers
 	* fix error handling of some merkle torrents
 	* fix error handling of unsupported hard-links
